--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="cabecalho">
       <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
@@ -15,6 +16,14 @@
             <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </header>
-
+    <section class="Escola">
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 com o objetivo ensinar Pensamento Computacional, através da Programação. </p>
+            <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunçeira, mas que entrega exelentes resultados!</p>
+        </div>
+       <img class="escola-imagem" src="Formula-bro.png" alt="Professora no quadro.">
+    </section>    
 </body>
+
 </html>
