--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -13,17 +16,35 @@
       <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
         <ul class="cabecalho-lista">
            <li class="cabecalho-lista-item">Escola</li> 
-            <li class="cabecalho-lista-item">Estudante</li>
+           <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </header>
     <section class="Escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
             <p class="escola-texto-um">A Escola Alura foi fundada em 2010 com o objetivo ensinar Pensamento Computacional, através da Programação. </p>
-            <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunçeira, mas que entrega exelentes resultados!</p>
+            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
         </div>
        <img class="escola-imagem" src="Formula-bro.png" alt="Professora no quadro.">
-    </section>    
+    </section>
+    <section class="estudante">
+        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="Marcelo 1.png" alt="foto do marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <img class="estudante-icone" src="github.png" alt="icone github">
+            <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+            <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="Marcelo 1.png" alt="foto do marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <img class="estudante-icone" src="github.png" alt="icone github">
+            <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+            <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+        </div>
+
+    </section>   
 </body>
 
 </html>
