--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <header class="cabecalho">
       <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
@@ -29,22 +28,186 @@
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="Marcelo 1.png" alt="foto do marcelo">
-            <h3 class="estudante-nome">Marcelo</h3>
-            <img class="estudante-icone" src="github.png" alt="icone github">
-            <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-            <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+        <div class="estudante-todos">
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Gabrielly</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Franciele</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Gabriely Karine</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <span></span>
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Anna</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Evellyn</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Geovana</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <span></span>
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Emilly</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Heloisa Salu</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Heloiza Smith</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <span></span>
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Kemilly</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Mariangel</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Douglas</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <span></span>
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Yuri</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Luis Miguel</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Luis Fernando</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <span></span>
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">João</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Gustavo</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Kauan</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <span></span>
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Juan</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Jonatan</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Kelvin</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <span></span>
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Welligton</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="imagem.gabi.jpeg" alt="foto da gabi">
+               <h3 class="estudante-nome">Fernanda</h3>
+               <a href="https://github.com/gabriellyvieirasantos"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+               <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+               <a href="https://www.instagram.com/_gaabrielly.0/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
         </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="Marcelo 1.png" alt="foto do marcelo">
-            <h3 class="estudante-nome">Marcelo</h3>
-            <img class="estudante-icone" src="github.png" alt="icone github">
-            <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-            <img class="estudante-icone" src="instagram.png" alt="icone instagram">
-        </div>
-
-    </section>   
+    </section>
+    <footer class="rodape">
+        <img class="rodape-imagem" src="alurastart logo.png" alt="logo da alura start">
+    </footer>
 </body>
-
-</html>
